* Fix overflow of selected items at accounts/persons filter DropDown

--- a/src/view/css/app.css
+++ b/src/view/css/app.css
@@ -563,6 +563,6 @@ select {
 }
 
 .filter-item {
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   margin-right: 15px;
 }
